--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
     </div>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 
+    <script src="//code.tidio.co/aiguzr6kscgu7tlyvjiapj4zibdofunw.js" async></script>
+
     
 </body>
 </html>
